Dates UK format

--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -51,7 +51,7 @@
                                             -->
                                             <div class="form-group date-group" *ngIf="!isEdit[i]">
                                                 <i class="material-icons">insert_invitation</i>
-                                                <span class="text-value">{{formatDate(rate.StartDate, 'MM/DD/YYYY')}}</span>
+                                                <span class="text-value">{{formatDate(rate.StartDate, 'DD/MM/YYYY')}}</span>
                                             </div>
                                         </td>
                                         <td width="30%">
@@ -72,7 +72,7 @@
                                             -->
                                             <div class="form-group date-group" *ngIf="!isEdit[i]">
                                                 <i class="material-icons">insert_invitation</i>
-                                                <span class="text-value">{{formatDate(rate.EndDate, 'MM/DD/YYYY')}}</span>
+                                                <span class="text-value">{{formatDate(rate.EndDate, 'DD/MM/YYYY')}}</span>
                                             </div>
                                         </td>
                                         <td width="20%">
