--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -49,7 +49,7 @@
                         <i class="material-icons">person</i><span class="font-16">{{data.ClientName}}</span>
                     </div>
                     <div class="feature">
-                        <i class="material-icons">event</i><span class="font-16">{{dateFormat(data.CheckIn, 'DD/MM/YYYY')}} - {{dateFormat(data.CheckOut, 'DD/MM/YYYY')}}</span>
+                        <i class="material-icons">event</i><span class="font-16">{{dateFormat(data.CheckIn, 'MM/DD/YYYY')}} - {{dateFormat(data.CheckOut, 'MM/DD/YYYY')}}</span>
                     </div>
                 </div>
             </div>
