Submit Enquiry location

--- a/app/components/modal/enquiry/enquiry.component.html
+++ b/app/components/modal/enquiry/enquiry.component.html
@@ -19,7 +19,8 @@
                         <img *ngIf="!data.ImageId" class="img" src="../assets/img/image_placeholder.jpg">
                     </div>
                     <div class="villa-container">
-                        <h4 class="modal-title">{{data.Name}} <span class="location"><i class="material-icons">place</i> {{data.RegionName}}</span></h4>
+                        <h4 class="modal-title">{{data.Name}}</h4>
+                        <p class="location"><i class="material-icons">place</i> {{data.RegionName}}</p>
                     </div>
                 </div>
                 <div class="modal-body m-t-none p-t-none">
