--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
             <div class="card-description m-b-15 col-xs-12">
-                <span>{{villa.Headline}}</span>
+                <p class="text-nowrap text-capitalize">{{villa.Headline}}</p>
             </div>
         </div>
         <div class="row">
