get rental quote

--- a/app/components/modal/enquiry/enquiry.component.html
+++ b/app/components/modal/enquiry/enquiry.component.html
@@ -40,7 +40,7 @@
                             <div class="estimated-cost">
                                 <span class="control-label">Estimated Booking Cost:</span>
                                 <i class="material-icons">euro_symbol</i>
-                                <span class="">1295</span>
+                                <span class="">{{rentalQuote}}</span>
                             </div>
                         </div>
                     </div>
