--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -16,4 +16,4 @@
     </svg>
 </div>
 
-<enquiry-cmp [group]="enquiryForm" [data]="openVilla"></enquiry-cmp>
+<enquiry-cmp [group]="enquiryForm" [data]="openVilla" [rentalQuote]="rentalQuote"></enquiry-cmp>
