--- a/app/components/dashboard-filter/dashboard-filter.component.css
+++ b/app/components/dashboard-filter/dashboard-filter.component.css
@@ -15,6 +15,7 @@
     padding: 0 30px 0 15px;
     border-radius:0px;
     box-shadow: 0px 5px 10px 0 rgba(170, 168, 168, 0.4);
+    margin-bottom: 15px;
 }
 .input-group .input-group-addon {
     padding-top: 15px;
@@ -97,7 +98,7 @@
 }
 
 .sort-by {
-    padding-bottom: 50px;
+    padding-bottom: 0px;
     padding-left: 36px;
 }
 
