Property info -> Remove contact fix

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -173,7 +173,7 @@
                             </div>
                             <div *ngIf="loginService.getPermission('Properties/Put')" class="row">
                                 <div class="col-sm-6 col-md-6 col-lg-6">
-                                    <button class="btn btn-danger btn-icon" type="button" (click)="removeContact()">
+                                    <button class="btn btn-danger btn-icon" type="button" (click)="removeContact(i)">
                                         <i class="material-icons">delete</i> Remove Contact
                                     </button>
                                 </div>
