Property info -> Remove bathroom & bedroom fix

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -263,7 +263,7 @@
                                             <button class="btn btn-success btn-icon pull-right" type="button" (click)="addBedroom()" *ngIf="false">
                                                 <i class="material-icons">add</i> Add BEDROOM
                                             </button>
-                                            <button class="btn btn-danger btn-icon pull-right" type="button" (click)="removeBedroom()">
+                                            <button class="btn btn-danger btn-icon pull-right" type="button" (click)="removeBedroom(i)">
                                                 <i class="material-icons">delete</i> REMOVE BEDROOM
                                             </button>
                                         </div>
@@ -299,7 +299,7 @@
                                         <button class="btn btn-success btn-icon pull-right" type="button" (click)="addBathroom()" *ngIf="false">
                                             <i class="material-icons">add</i> Add BATHROOM
                                         </button>
-                                        <button class="btn btn-danger btn-icon pull-right" type="button" (click)="removeBathroom()">
+                                        <button class="btn btn-danger btn-icon pull-right" type="button" (click)="removeBathroom(i)">
                                             <i class="material-icons">delete</i> REMOVE BATHROOM
                                         </button>
                                     </div>
