--- a/app/components/tables/forthcoming/forthcoming.component.css
+++ b/app/components/tables/forthcoming/forthcoming.component.css
@@ -30,6 +30,7 @@
     color: #fff;
     line-height: 18px;
     display: none;
+    white-space: nowrap;
 }
 .table-enquiries .enquiry-status.accepted {
     background-color: #00bfa5;
