remove terms and policy

--- a/app/components/booking/proposal/proposal.component.html
+++ b/app/components/booking/proposal/proposal.component.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <!--agent contracts-->
-            <div class="row">
+            <div class="row hidden">
                 <div class="col-xs-6 col-md-12 col-lg-6">
                     <div class="input-group p-l-5">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
