--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -58,7 +58,7 @@
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="material-icons">mail</i></span>
-                    <input-field-cmp [data]="{title: 'Email', name: 'Email', type: 'email'}"
+                    <input-field-cmp [data]="{title: 'Email', name: 'Email', type: 'text'}"
                                      [errorForm]="errorForm"
                                      [field]="bookingForm.controls.ClientContactEmail"></input-field-cmp>
                 </div>
