--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -1,4 +1,4 @@
-<div class="property-info" *ngIf="propertiesService.property">
+<div class="property-info">
     <div class="enquiry-header">
         <div class="image-wrp">
             <div class="image-villa">
