--- a/app/components/booking/proposal/proposal.component.html
+++ b/app/components/booking/proposal/proposal.component.html
@@ -5,7 +5,7 @@
                 <div class="proposal-line">Booking details</div>
             </div>
         </div>
-        <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt && !data.Enquiry.CancelledAt && !data.Enquiry.DeclinedAt">
+        <div>
             <div class="row">
                 <div class="col-xs-6">
                     <div class="input-group p-l-5">
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <!--agent contracts-->
-            <div class="row hidden">
+            <div class="row" *ngIf="false">
                 <div class="col-xs-6 col-md-12 col-lg-6">
                     <div class="input-group p-l-5">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
@@ -68,11 +68,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="loginService.getRoles('Agent') && status == 'Awaiting Signed Contract'">
+            <div class="row" *ngIf="loginService.getRoles('Agent') && data.Status == 'Awaiting Signed Contract'">
                 <div class="col-xs-6 p-l-r-30"><p style="line-height: 64px;margin: 0">The contract requires your signature</p></div>
                 <div class="col-xs-6"><button class="btn btn-success" (click)="signContract()">Sign Contract</button></div>
             </div>
-            <div class="row hidden" *ngIf="!loginService.getRoles('Agent')">
+            <div class="row" *ngIf="false">
                 <div class="col-xs-12 p-l-r-30">
                     <div class="divider"></div>
                     <div class="terms p-l-r-10">
