--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -36,12 +36,19 @@
                             <singleselect-field-cmp *ngIf="propertiesService.managers.length"
                                                     [dataList]="propertiesService.managers"
                                                     [options]="{title: 'Manager*', default: 'Select Manager'}"
+                                                    [errorForm]="errorForm"
                                                     [field]="propertyForm.controls.ManagerUser"></singleselect-field-cmp>
                             <singleselect-field-cmp *ngIf="!propertiesService.managers.length && propertyForm.controls.ManagerUser.value"
                                                     [dataList]="propertiesService.managers"
                                                     [options]="{title: 'Manager*', default: 'Select Manager'}"
                                                     [errorForm]="errorForm"
                                                     [field]="propertyForm.controls.ManagerUser"></singleselect-field-cmp>
+                        </div>
+                        <div class="col-xs-4">
+                            <singleselect-field-cmp [dataList]="propertiesService.regions"
+                                                    [errorForm]="errorForm"
+                                                    [options]="{title: 'Select Region *', default: 'Select Region'}"
+                                                    [field]="propertyForm.controls.Region"></singleselect-field-cmp>
                         </div>
                     </div>
                     <div class="row">
@@ -76,23 +83,30 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
+                        </div>
+                    </div>
+                    <!--
+                    <div class="row">
+                        <div class="col-xs-12">
                             <div id="regionName"
                                  class="form-group label-floating"
                                  [ngClass]="{'has-error':!propertyForm.controls['Region'].valid && errorForm, 'is-empty': !propertyForm.controls.Region.value}">
                                 <label class="control-label">Select Region *</label>
                                 <input class="form-control"
+                                       #autocompile
                                        ng2-auto-complete
                                        formControlName="Region"
                                        [(ngModel)]="propertyForm.controls.Region.value"
                                        [max-num-list]="10"
                                        [source]="propertiesService.regions"
                                        [list-formatter]="autocompleListFormatter"
-                                       (valueChanged)="setRegionValue($event)"
+                                       (valueChanged)="regionChanged($event)"
                                        value-property-name="Id"
                                        display-property-name="Name">
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
 
                 <div [formGroup]="propertyForm" class="tab-pane" id="heading-description">
