--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -23,7 +23,7 @@
             <p class="location"><i class="material-icons">place</i> {{propertiesService.property.Region.Name}}</p>
         </div>
         <div class="villa-container right">
-            <a class="btn btn-success pull-right font-16 m-r-10" [routerLink]="['/messages/enquiry/' + data.EnquiryMessageThreadId]">View enquiry</a>
+            <a class="btn btn-success pull-right font-16 m-r-10" [routerLink]="['/booking/enquiry/' + data.EnquiryMessageThreadId]">View enquiry</a>
         </div>
     </div>
     <div class="enquiry-body">
