Tentative/Confirmed tabs linked to bookings component

--- a/app/components/booking/booking-tabs/booking-tabs.component.html
+++ b/app/components/booking/booking-tabs/booking-tabs.component.html
@@ -2,13 +2,13 @@
     <li routerLink="/booking/enquiry" routerLinkActive="active">
         <a >Enquiries</a>
     </li>
-    <li routerLink="/booking/forthcoming" routerLinkActive="active">
+    <li routerLink="/booking/tentative" routerLinkActive="active">
         <a>Tentative</a>
     </li>
-    <li routerLink="/booking/current" routerLinkActive="active">
+    <li routerLink="/booking/confirmed" routerLinkActive="active">
         <a>Confirmed</a>
     </li>
-    <li routerLink="/booking/current" routerLinkActive="active">
+    <li routerLink="/booking/checkedin" routerLinkActive="active">
         <a>Checked-In</a>
     </li>
     <li routerLink="/booking/past" routerLinkActive="active">
